--- a/tag.html
+++ b/tag.html
@@ -1,10 +1,32 @@
-<p>paragraph</p>
-<span>span</span>
-
-<ul style="padding-left: 10px;">
-    <li>i1</li>
-    <li>i2</li>
-    <li>i3</li>
-    <li>i4</li>
-    <li>i5</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>tag</title>
+</head>
+<body>
+    <div>
+        <ul>
+            <li>i1</li>
+            <li>i2</li>
+            <li>i3</li>
+            <li>i4</li>
+            <li>i5</li>
+        </ul>
+    </div>
+</body>
+</html>
+<style>
+    ul{
+        display: flex; 
+        justify-content: space-around;
+        flex-wrap: wrap;
+        background-color: antiquewhite;
+        text-transform: uppercase;
+        list-style:none;
+    }
+    li{
+        width: 80px;
+    }
+</style>
